fix home page alignment

--- a/style.css
+++ b/style.css
@@ -265,7 +265,7 @@ body {
         color: #333;
         margin: 0;
         padding: 0;
-        text-align: center;
+        /* text-align: center; */
       }
 
       header {
